// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`placeholder should be wrapped with a CustomAnimation when the customAnimation prop is set 1`] = `
<Component
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Line
      key=".0"
      noMargin={false}
    />
    <Line
      key=".1"
      noMargin={false}
    />
    <Line
      key=".2"
      noMargin={true}
    />
  </View>
</Component>
`;

exports[`placeholder should be wrapped with an Animation when animate prop is set to "fade" 1`] = `
<Fade
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Line
      key=".0"
      noMargin={false}
    />
    <Line
      key=".1"
      noMargin={false}
    />
    <Line
      key=".2"
      noMargin={true}
    />
  </View>
</Fade>
`;

exports[`placeholder should display the whenReadyRender when isReady is true 1`] = `<whenReadyRender />`;

exports[`placeholder should have a component on the left side when renderLeft is provided 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "width": "100%",
    }
  }
>
  <Text
    style={
      Object {
        "marginRight": 12,
      }
    }
  >
    Left content
  </Text>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Line
      key=".0"
      noMargin={false}
    />
    <Line
      key=".1"
      noMargin={false}
    />
    <Line
      key=".2"
      noMargin={true}
    />
  </View>
</View>
`;

exports[`placeholder should have a component on the right side when renderRight is provided 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Line
      key=".0"
      noMargin={false}
    />
    <Line
      key=".1"
      noMargin={false}
    />
    <Line
      key=".2"
      noMargin={true}
    />
  </View>
  <Text
    style={
      Object {
        "marginLeft": 12,
      }
    }
  >
    Right content
  </Text>
</View>
`;

exports[`placeholder should match snapshot 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Line
      key=".0"
      noMargin={false}
    />
    <Line
      key=".1"
      noMargin={false}
    />
    <Line
      key=".2"
      noMargin={true}
    />
  </View>
</View>
`;

exports[`placeholder shouldnt display anything when whenReadyRender is undefined 1`] = `""`;
